syntax = "proto3";

package appguard_commands;

import "google/protobuf/empty.proto";

message AuthorizationRequest {
    string uuid = 1;
    string org_id = 2;
    
    // Client Data
    string category = 3;  // Client category: App, Load balancer, Firewall, etc.
    string model = 4;     // Model of client, e.g. OPNSence vs PfSense.
    string target_os = 5; // Client's operating system
}

message Authentication {
    string app_id = 1;
    string app_secret = 2;
}

message ClientMessage {
    oneof message {
        AuthorizationRequest authorization_request = 1;
        Authentication authentication = 2;
    }
}

message AuthenticationData {
    optional string app_id = 1;
    optional string app_secret = 2;
}

message ServerMessage {
    oneof message {
        string update_token_command = 1;
        
        FirewallDefaults set_firewall_defaults = 2;

        google.protobuf.Empty heartbeat_message = 3;

        AuthenticationData device_authorized_message = 4;
        google.protobuf.Empty device_deauthorized_message = 5;
        google.protobuf.Empty authorization_rejected_message = 6;
    }
}

message FirewallDefaults {
    uint32 timeout = 1;
    FirewallPolicy policy = 2;
}

enum FirewallPolicy {
    UNKNOWN = 0;
    ALLOW = 1;
    DENY = 2;
}
